@@ -1,4 +1,4 @@
 FROM navikt/java:16
 COPY target/*.jar app.jar
-ENV JAVA_OPTS --enable-preview
+ENV JAVA_OPTS --enable-preview --illegal-access=permit
 
